data/derived/comb/progs/unify/prog1771.ml.out
Characters 130-192:
  then buildTangent(build(rand, depth - 1)), (build(rand, depth - 1));;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
